--- a/index.html
+++ b/index.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
-<html lang="pl"
+<html lang="pl">
 
   <head>
-  <meta charset="UTF-8">
-  <title>ordisoft</title>
-                   </head>
+    <meta charset="UTF-8">
+    <title>Ordisoft</title>
+  </head>
+
   <body>
-    <h1>ordisoft</h1>
-      Na pomysł z Ordisoftem wpadłem w 2023 r. kiedy na urodziny mojego taty pisałem dla niego prosty zestaw nażędzi biurowych w html, w tedy nowością był Chatgpt, którego używam do dziś. Wracając, od dziecka byłem oblatany w komputerach, więc wiadomym było, że prędzej czy puźniej zainteresuje się programowaniem. Pierwszy był batch, puźniej html a teraz python. Niestety projekt Ordi office, bo tak nazywały się te nażędzia, przepadł.
-      Na tej stronie będę wżucał moje projekty (a raczej linki do nich).
-      <p>linki do projektów</p>p>
-      narazie niema tu nic, ale obiecuje, że niedługo się to zmieni.
+    <h1>Ordisoft</h1>
+    Na pomysł z Ordisoftem wpadłem w 2023 r., kiedy na urodziny mojego taty pisałem dla niego prosty zestaw narzędzi biurowych w HTML. Wtedy nowością był ChatGPT, którego używam do dziś. Wracając, od dziecka byłem oblatany w komputerach, więc wiadomym było, że prędzej czy później zainteresuję się programowaniem. Pierwszy był batch, później HTML, a teraz Python. Niestety projekt OrdiOffice, bo tak nazywały się te narzędzia, przepadł.
+    Na tej stronie będę wrzucał moje projekty (a raczej linki do nich).
+    <p>Linki do projektów</p>
+    Na razie nie ma tu nic, ale obiecuję, że niedługo się to zmieni.
   </body>
-</h  tml>
+
+</html>
